tests/snapshots/deserializer__int16array_resizable.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Int16Array(new ArrayBuffer(2, { maxByteLength: 10 }))"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
        ],
        max_byte_length: Some(
            10,
        ),
    },
    1: ArrayBufferView {
        kind: Int16Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

