tests/snapshots/deserializer__int8array_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Int8Array()"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Int8Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

